--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@jeremyphilemon/react-audioplaylist",
-  "version": "1.0.6",
+  "name": "react-audioplaylist",
+  "version": "1.0.7",
   "description": "React Audio Player Component",
   "author": "jeremyphilemon",
   "license": "MIT",
